# SystemInfoCpp

./: LICENSE  README.md
systeminfoprinter/: CMakeLists.txt  CMakePresets.json  main  main.cpp
